kubernetes/apps/servarr/upbrr/app/deployment.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app upbrr
  labels:
    app.kubernetes.io/name: *app
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
    spec:
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - image: ghcr.io/autobrr/upbrr:0.4.0@sha256:cfd21650a797acc6a303a34f7fc6c004a03c9cbd1c364016bc89e7105126c937
          name: *app
          ports:
            - containerPort: 7480
              name: http
          livenessProbe: &probes
            httpGet:
              path: /api/auth/status
              port: 7480
            initialDelaySeconds: 0
            periodSeconds: 15
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe: *probes
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data/downloads
              subPath: downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: *app
        - name: media
          persistentVolumeClaim:
            claimName: media
